edit contorller 작성, 테스트